HE4Cloud/install/aws/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: he4cloud-ingress-stage
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: he4cloud-server-provisioning
                port:
                  number: 5001
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: he4cloud-ui
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - stage.he4cloud.com
